Remove padding and adjust  viewBox values to avoid cropped paths

--- a/polaris-react/src/components/Icon/Icon.module.scss
+++ b/polaris-react/src/components/Icon/Icon.module.scss
@@ -12,9 +12,6 @@
 
 .Icon svg {
   fill: currentColor;
-  @media (--p-breakpoints-md-down) {
-    padding: var(--p-space-050); // 2px;
-  }
 }
 
 .toneInherit svg {
